[package]
name = "the-wild-oasis-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.31.0", features = ["behavior-version-latest"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
